Fix title over header on mobile

--- a/assets/css/src/base/typography.scss
+++ b/assets/css/src/base/typography.scss
@@ -179,7 +179,8 @@ blockquote {
   }
 }
 
-.hero-caption {
+.hero-caption,
+.wp-caption-text {
   @extend %h6;
 
   font-size: em(10, 16);
