--- a/assets/css/src/components/captions.scss
+++ b/assets/css/src/components/captions.scss
@@ -2,7 +2,6 @@
  * Captions
  */
 
-
 .wp-caption {
   margin-bottom: 1.5em;
   max-width: 100%;
@@ -17,5 +16,4 @@
 }
 
 .wp-caption-text {
-  text-align: center;
 }
