--- a/assets/css/src/layout/posts-pages.scss
+++ b/assets/css/src/layout/posts-pages.scss
@@ -396,27 +396,6 @@
         margin-left: 0 - flex-gutter(2);
       }
     }
-
-    .alignleft {
-      margin-right: flex-gutter();
-      margin-left: 0 - flex-gutter();
-    }
-
-    .alignright {
-
-      margin-right: 0 - flex-gutter();
-      margin-left: flex-gutter();
-    }
-
-    .alignleft + .alignright {
-      margin-left: 0 - flex-gutter(2);
-      + * { clear: both; }
-    }
-
-    .aligncenter {
-      margin-left: 0 - flex-gutter();
-      margin-right: 0 - flex-gutter();
-    }
   }
 
   .entry-footer + .ad {
@@ -546,32 +525,42 @@
   }
 }
 
+.is-full-screen.single .entry-content {
+  .alignleft {
+    margin-right: flex-gutter();
+    margin-left: 0 - flex-gutter();
+  }
+
+  .alignright {
+    margin-right: 0 - flex-gutter();
+    margin-left: flex-gutter();
+  }
+
+  .alignleft + .alignright {
+    margin-left: 0 - flex-gutter(2);
+    + * {
+      clear: both;
+    }
+  }
+
+  .aligncenter {
+    margin-left: 0 - flex-gutter();
+    margin-right: 0 - flex-gutter();
+  }
+}
+
 .is-full-screen.single .site-main .title-over-hero {
   .entry-hero {
-    position: relative;
     margin-bottom: 0;
-
-    &:after {
-      content: '';
-
-      position: absolute;
-      top: 33%;
-      right: 0;
-      bottom: 0;
-      left: 0;
-      z-index: 1;
-
-      background: linear-gradient(to bottom, transparent, rgba( 1, 1, 1, 0.44) 50%);
-    }
   }
 
   .entry-header {
     position: absolute;
-    top: calc(100vh - 50px);
+    top: auto;
     z-index: 2;
     //width: 100vw;
     //max-width: 100vw;
-    padding: $gutter flex-gutter();
+    padding: $gutter flex-gutter(6);
 
     color: color(white);
 
@@ -591,25 +580,23 @@
 
 .is-full-screen.single .site-main .hero-shadow {
   .entry-hero {
+    position: relative;
 
-  }
+    &:after {
+      content: "";
 
-  .entry-header:after {
+      position: absolute;
+      top: 33%;
+      right: 0;
+      bottom: 0;
+      left: 0;
+      z-index: 1;
 
-    $margin: flex-gutter(2);
-    content: '';
-
-    position: absolute;
-
-    bottom: 0;
-    left: 0 - $margin;
-    right: calc( 100vh - #{$margin});
-    z-index: 5;
-
-    //width: 100vh;
-    height: 100%;
-
-
-    outline: 3px dotted red;
+      background: linear-gradient(
+        to bottom,
+        transparent,
+        rgba(1, 1, 1, 0.44) 50%
+      );
+    }
   }
 }
